--- a/index.html
+++ b/index.html
@@ -1,12 +1,118 @@
 <!DOCTYPE html>
-<html>
-<head>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
-	<link rel="stylesheet" href="/styles/main.css">
-</head>
-<body>
-	<div class="container"></div>
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en-us">
+
+<head> 
+	<meta charset="utf-8"> 
+	<meta http-equiv="content-type" content="text/html; charset=utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>
+		
+		Lolly — James Musgrave
+		
+	</title> 
+	<link rel="stylesheet" href="css/global.css" type="text/css" charset="utf-8" /> 
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+	<script src="js/detector.js"></script>
+	<script src="js/libs/stats.js"></script>
+</head> 
+
+<body class="black-background">
+
+	<nav>
+	<a href="index.html" data-href="/sketches/lolly/">○</a>
+	<a href="sketches/lab/index.html">○</a>
+	<a href="sketches/town/index.html">○</a>
+	<a href="sketches/debris/index.html">○</a>
+	<a href="sketches/flock/index.html">○</a>
+	<div>─</div>
+	<a href="archive/charm/index.html">○</a>
+	<a href="archive/louisvuitton/index.html" class="hidden">○</a>
+	<a href="archive/dial/index.html">○</a>
+	<a href="archive/knightstour/index.html">○</a>
+	<div>─</div>
+	<a href="about/index.html">?</a>
+</nav>
+<div id="information">
+	<div>
+		<div class="close peace">✌</div>
+		Based in London, working at <a href="http://www.yesstudio.co.uk" target="_blank">YES</a><br/>
+		This site features a small section of self-initiated and commissioned projects<br/>
+		<a href="cdn-cgi/l/email-protection.html#3459555d58745e5559514759414753465542511a575b59">Email</a>/<a href="http://www.twitter.com/jamesmu/" target="_blank">Twitter</a>
+		<div class="close">↩</div>
+	</div>
+</div>
+<script>
+$(function(){
+	$('nav a[href="' + location.pathname + '"]').text('●');
+	$('nav a[data-href="' + location.pathname + '"]').text('●');
+	$("#information .close, a[href='/about/']").click(function(e){
+		$('body').toggleClass('information');
+		e.preventDefault();
+	});
+});
+</script>
+
+	<div id="container"></div>
+
+<script src="js/libs/three.58.js"></script>
+<script src="js/plugins/ImprovedNoise.js"></script>
+<script src="js/plugins/Three.SubdivisionModifier.js"></script>
+<script src="sketches/lolly/script.js"></script>
+
+<script type="x-shader/x-vertex" id="sem-vs">
+
+	varying vec2 vN;
+
+	void main() {
+
+		vec3 e = normalize( vec3( modelViewMatrix * vec4( position, 1.0 ) ) );
+		vec3 n = normalize( normalMatrix * normal );
+
+		vec3 r = reflect( e, n );
+		float m = 2. * sqrt( pow( r.x, 2. ) + pow( r.y, 2. ) + pow( r.z + 1., 2. ) );
+		vN = r.xy / m + .5;
+
+		gl_Position = projectionMatrix * modelViewMatrix * vec4( position, 1. );
+
+	}
+
+</script>
+
+<script type="x-shader/x-vertex" id="sem-fs">
+
+	uniform sampler2D tMatCap;
+
+	varying vec2 vN;
+
+	void main() {
+
+		vec3 base = texture2D( tMatCap, vN ).rgb;
+		gl_FragColor = vec4( base, 1. );
+
+	}
+
+</script>
+
+<script type="text/javascript">
+/* <![CDATA[ */
+(function(){try{var s,a,i,j,r,c,l=document.getElementsByTagName("a"),t=document.createElement("textarea");for(i=0;l.length-i;i++){try{a=l[i].getAttribute("href");if(a&&a.indexOf("/cdn-cgi/l/email-protection") > -1  && (a.length > 28)){s='';j=27+ 1 + a.indexOf("/cdn-cgi/l/email-protection");if (a.length > j) {r=parseInt(a.substr(j,2),16);for(j+=2;a.length>j&&a.substr(j,1)!='X';j+=2){c=parseInt(a.substr(j,2),16)^r;s+=String.fromCharCode(c);}j+=1;s+=a.substr(j,a.length-j);}t.innerHTML=s.replace(/</g,"&lt;").replace(/>/g,"&gt;");l[i].setAttribute("href","mailto:"+t.value);}}catch(e){}}}catch(e){}})();
+/* ]]> */
+</script>
+</body>
+</html>
+
+	
+
+	<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-6799354-1', 'jamesmusgrave.com');
+  ga('send', 'pageview');
+
+</script>
 
 </body>
-<script src="/js/app.js"></script>
 </html>
