--- a/index.html
+++ b/index.html
@@ -1,12 +1,68 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<title>musgrave exploration</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
 	<link rel="stylesheet" href="/styles/main.css">
+	
+	<style>
+		body {
+			background: black;
+		}
+		canvas {
+			position:absolute;
+			top:0;
+			left:0;
+			display:block;
+		}
+		
+		.buttons {
+			position: absolute;
+			bottom: 40px;
+			width:100%;
+			text-align:center;
+		}
+
+		#container {
+			height: 100vh;
+			width: 100vw;
+		}
+	</style>
 </head>
 <body>
-	<div class="container"></div>
+	<div id="container" class="canvasContainer"></div>
 
 </body>
+
+<script src="/js/vendors/three.58.js"></script>
+<!--<script src="http://threejs.org/build/three.min.js"></script>-->
+<!--
+<script src="http://threejs.org/examples/js/loaders/DDSLoader.js"></script>
+<script src="http://threejs.org/examples/js/loaders/OBJMTLLoader.js"></script>
+<script src="http://threejs.org/examples/js/loaders/MTLLoader.js"></script>
+-->
+<script src="/js/plugins/Three.SubdivisionModifier.js"></script>
+
+<script type="x-shader/x-vertex" id="sem-vs">
+	varying vec2 vN;
+	void main() {
+		vec3 e = normalize( vec3( modelViewMatrix * vec4( position, 1.0 ) ) );
+		vec3 n = normalize( normalMatrix * normal );
+		vec3 r = reflect( e, n );
+		float m = 2. * sqrt( pow( r.x, 2. ) + pow( r.y, 2. ) + pow( r.z + 1., 2. ) );
+		vN = r.xy / m + .5;
+		gl_Position = projectionMatrix * modelViewMatrix * vec4( position, 1. );
+	}
+</script>
+
+<script type="x-shader/x-vertex" id="sem-fs">
+	uniform sampler2D tMatCap;
+	varying vec2 vN;
+	void main() {
+		vec3 base = texture2D( tMatCap, vN ).rgb;
+		gl_FragColor = vec4( base, 1. );
+	}
+</script>
+
 <script src="/js/app.js"></script>
 </html>
