--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
 	<link rel="stylesheet" href="/styles/main.css">
+	<title>Corner</title>
 </head>
 <body>
 	<div class="container"></div>
