--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
 	<title>Corner</title>
 </head>
 <body>
-	<div class="container"></div>
+	<div class="container-fluid"></div>
 
 </body>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r73/three.min.js"></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.0/TweenMax.min.js'></script>
 <script src="/js/app.js"></script>
 </html>
