--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r73/three.min.js"></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.0/TweenMax.min.js'></script>
+<script src="/js/vendor/compass.js"></script>
 <script src="/js/app.js"></script>
 </html>
